// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render and open the modal 1`] = `
<button
  key="add-member-button"
  onClick={[Function]}
>
  organization.members.add
</button>
`;

exports[`should render and open the modal 2`] = `
Array [
  <button
    key="add-member-button"
    onClick={[Function]}
  />,
  <Modal
    contentLabel="users.add"
    key="add-member-modal"
    onRequestClose={[Function]}
  />,
]
`;
